[gd_scene load_steps=4 format=3 uid="uid://dpxlrqdys1uey"]

[ext_resource type="Script" path="res://ui/menus/CraftingMenu/subnodes/scripts/IngredientSlot.gd" id="1_42g3b"]
[ext_resource type="Texture2D" uid="uid://8blgvkpeh7o0" path="res://ui/menus/CraftingMenu/assets/IngredientSlot.png" id="2_2gcpy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rffon"]
radius = 25.0

[node name="IngredientSlot" type="Node2D"]
script = ExtResource("1_42g3b")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_2gcpy")

[node name="IngredientDetector" type="Area2D" parent="."]

[node name="DetectorShape" type="CollisionShape2D" parent="IngredientDetector"]
shape = SubResource("CircleShape2D_rffon")

[connection signal="area_entered" from="IngredientDetector" to="." method="_on_area_entered"]
[connection signal="body_entered" from="IngredientDetector" to="." method="_on_body_entered"]
[connection signal="body_exited" from="IngredientDetector" to="." method="_on_body_exited"]
